add compatibility with vines